--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "https-browserify": "^1.0.0",
+    "stream-http": "^3.2.0",
+    "vue": "^3.2.13",
+    "webpac": "^0.0.1-security"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -18,7 +21,9 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "webpack": "^5.81.0",
+    "webpack-dev-server": "^4.13.3"
   },
   "eslintConfig": {
     "root": true,
